@@ -68,6 +68,9 @@ Release 2.8.0 - UNRELEASED
     HDFS-9082. Change the log level in WebHdfsFileSystem.initialize() from INFO
     to DEBUG. (Santhosh Nayak via cnauroth)
 
+    HDFS-8855. Webhdfs client leaks active NameNode connections.
+    (Xiaobing Zhou via Jitendra Nath Pandey)
+
   OPTIMIZATIONS
 
     HDFS-8856. Make LeaseManager#countPath O(1). (Arpit Agarwal)
